--- a/css/Pocky.css
+++ b/css/Pocky.css
@@ -1,3 +1,22 @@
-.input_wrapper * {
-  display: inline-block;
+html, body {
+  width: 100%;
+  height: 100%;
 }
+
+body {
+  background-color: black;
+}
+
+p {
+  color: white;
+  margin: 0;
+}
+
+#log_wrapper {
+  overflow-y: scroll;
+  height: 60%;
+}
+
+/* #room_input_wrapper, #msg_input_wrapper {
+  display: none;
+} */
