--- a/css/Pocky.css
+++ b/css/Pocky.css
@@ -1,14 +1,15 @@
 html, body {
   width: 100%;
   height: 100%;
+  margin: 0;
 }
 
 body {
-  background-color: black;
+  /* background-color: black; */
 }
 
 p {
-  color: white;
+  /* color: white; */
   margin: 0;
 }
 
