切断ボタン

--- a/css/Pocky.css
+++ b/css/Pocky.css
@@ -5,11 +5,11 @@ html, body {
 }
 
 body {
-  /* background-color: black; */
+  background-color: #e03fd0;
 }
 
 p {
-  /* color: white; */
+  color: white;
   margin: 0;
 }
 
