--- a/css/Pocky.css
+++ b/css/Pocky.css
@@ -5,19 +5,207 @@ html, body {
 }
 
 body {
-  background-color: #274e3e;
+  background-color: #ffffff;
 }
 
-p {
-  color: white;
+header {
+  width: 100%;
+  height: 60px;
+  background-color: #b59fff;
+  position: relative;
+}
+
+.login_data {
+  position: absolute;
+  text-align: right;
+  top: 50%;
+  right: 10px;
+  -webkit-transform: translate(0, -50%);
+}
+
+.login_data>* {
+  display: inline-block;
+  vertical-align: top;
+}
+
+p{
   margin: 0;
 }
 
-#log_wrapper {
-  overflow-y: scroll;
-  height: 60%;
+input, p {
+  height: 22px;
+  padding: 0;
 }
 
-/* #room_input_wrapper, #msg_input_wrapper {
+input[type="button"] {
+  width: 50px;
+}
+
+input[type="text"] {
+  height: 18px;
+}
+
+.page, .room_header-close{
   display: none;
-} */
+}
+
+.page {
+  position: absolute;
+  width: 100%;
+  height: calc(100% - 60px);
+  text-align: center;
+}
+
+#login_page {
+  display: block;
+}
+
+#login_form {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+}
+
+#login_form > * {
+  position: relative;
+  display: block;
+  margin: 4px auto;
+}
+
+#peer_id_input {
+  display: block;
+  width: 150px;
+  margin: 10px auto;
+}
+
+.room_header {
+  width: 100%;
+  min-width: 220px;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.room_header>* {
+  display: inline-block;
+  vertical-align: top;
+}
+
+#room_name_input {
+  height: 22px;
+  width: 130px;
+}
+#room_name_label {
+  width: 130px;
+}
+
+.room_wrapper {
+  position: relative;
+  display: flex;
+  text-align: center;
+  width: 100%;
+  min-width: 220px;
+  height: calc(100% - 57px);
+  margin: auto;
+  padding-top: 10px;
+}
+
+.room_member_list_scroll {
+  overflow-y: scroll;
+  width: 30%;
+  max-width: 220px;
+  min-width: 80px;
+  height: calc(100% - 30px);
+  border-radius: 5px;
+  margin: 10px 5px;
+  margin-left: auto;
+  border: 1px solid #b59fff;
+}
+
+.room_member_list_scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.room_member_list {
+  width: 100%;
+  height: auto;
+  padding: 1px 0;
+}
+
+.room_member {
+  width: auto;
+  height: 80px;
+  background-color: #ffffff;
+  border: 1px solid #b59fff;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+.room_member > p {
+  overflow: hidden;
+}
+
+.member_name {
+  width: 100%;
+  height: 30px;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.member_ready {
+  width: 100%;
+  height: 30px;
+  text-align: center;
+}
+
+.setting_wrapper {
+  position: relative;
+  width: 50%;
+  max-width: 300px;
+  min-width: 220px;
+  height: calc(100% - 30px);
+  margin: 10px 5px;
+  margin-right: auto;
+}
+
+.range_wrapper > p {
+  display: inline-block;
+  width: 134px;
+}
+
+.range_wrapper > .range_label {
+  display: block;
+  margin-top: 10px;
+  font-size: 10px;
+  width: 100%;
+  height: 10px;
+}
+
+.range_wrapper > input[type="range"] {
+  width: 90%;
+}
+
+.range_wrapper > input[type="radio"] {
+  margin-top: 10px;
+}
+
+.range_wrapper, .radio_wrapper {
+  width: 100%;
+  margin-top: 30px;
+}
+
+.setting_wrapper .left_btn,
+.setting_wrapper .right_btn {
+  display: inline-block;
+  width: 30px;
+  vertical-align: top;
+}
+
+.setting_wrapper > #ready_btn {
+  position: absolute;
+  width: 80%;
+  height: 50px;
+  left: 10%;
+  bottom: 20px;
+}
