--- a/css/Pocky.css
+++ b/css/Pocky.css
@@ -39,6 +39,16 @@ input, p {
 
 input[type="button"] {
   width: 50px;
+
+  border-radius: 0;
+  -webkit-box-sizing: content-box;
+  -webkit-appearance: button;
+  appearance: button;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+input[type="button"]::-webkit-search-decoration {
+  display: none;
 }
 
 input[type="text"] {
@@ -104,10 +114,12 @@ input[type="text"] {
   position: relative;
   display: flex;
   text-align: center;
-  width: 100%;
+  width: calc(100% - 10px);
   min-width: 220px;
   height: calc(100% - 57px);
   margin: auto;
+  padding: 5px;
+  padding: 5px;
   padding-top: 10px;
 }
 
@@ -118,7 +130,7 @@ input[type="text"] {
   min-width: 80px;
   height: calc(100% - 30px);
   border-radius: 5px;
-  margin: 10px 5px;
+  margin: 10px 0;
   margin-left: auto;
   border: 1px solid #b59fff;
 }
@@ -165,7 +177,7 @@ input[type="text"] {
   max-width: 300px;
   min-width: 220px;
   height: calc(100% - 30px);
-  margin: 10px 5px;
+  margin: 10px 0;
   margin-right: auto;
 }
 
@@ -176,7 +188,6 @@ input[type="text"] {
 
 .range_wrapper > .range_label {
   display: block;
-  margin-top: 10px;
   font-size: 10px;
   width: 100%;
   height: 10px;
@@ -192,7 +203,7 @@ input[type="text"] {
 
 .range_wrapper, .radio_wrapper {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .setting_wrapper .left_btn,
@@ -207,5 +218,5 @@ input[type="text"] {
   width: 80%;
   height: 50px;
   left: 10%;
-  bottom: 20px;
+  bottom: 10px;
 }
